# futuapi-rs

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
from_into_derive/: Cargo.toml
from_into_derive/src/: lib.rs
futu_proto/: README.MD
src/: common.rs  futuapi.rs  lib.rs  protocol.rs  qot.rs  trd.rs
src/pb/: mod.rs  protocol.proto
tests/: test_connect.rs  test_qot.rs  test_trd.rs
tests/connect/: mod.rs
